# Kata-RomanNumeralsConverter

./: .gitattributes  ACKNOWLEDGEMENTS.md  Jenkinsfile  QuickRetrospective.md  README.md
.github/: dependabot.yml
.github/workflows/: go.yml  gradle.yml  maven.yml  npm.yml  pytest.yml
cpp/: CMakeLists.txt  GETTING_STARTED.md  GETTING_STARTED_TCR.md
cpp/cmake/: cmake-wrapper.sh  version.txt
cpp/include/kata/roman_numerals/: RomanNumerals.hpp  config.hpp
cpp/src/kata/roman_numerals/: RomanNumerals.cpp
cpp/test/: RomanNumeralsTest.cpp
go/: GETTING_STARTED.md  go.mod
go/src/roman_numerals/: roman_numerals.go  roman_numerals_test.go
java/: GETTING_STARTED.md  GETTING_STARTED_TCR.md  build.gradle  pom.xml  settings.gradle
java/src/main/java/: RomanNumerals.java
java/src/main/java/com/murex/: RomanNumerals.java
java/src/test/java/: RomanNumeralsTest.java
java/src/test/java/com/murex/: RomanNumeralsTest.java
python/: GETTING_STARTED.md  requirements.txt  setup.py
python/src/roman_numerals/: roman_numerals.py
python/tests/: roman_numerals_test.py
typescript/: GETTING_STARTED.md  package.json
typescript/src/: RomanNumerals.ts
typescript/test/: RomanNumerals.spec.ts
